# BIMOS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANUAL.md  NOTICE.md  README.md  SECURITY.md  VERSIONING.md  builder.py  docker-compose.yml  mkdocs.yml  test.py
.github/workflows/: build.yml  ci.yml  docker.yml
backend/: .env.example  Dockerfile  README.md  build.py  main.py  pyproject.toml
backend/bimos/api/: routes.py  schemas.py  server.py  utils.py
backend/bimos/api/endpoints/: __init__.py  config.py  dock.py  jobs.py  predict.py  simulate.py  system.py
backend/bimos/cli/: main.py  manual.yaml  utils.py
backend/bimos/cli/commands/: dock.py  license.py  predict.py  qm.py  setup.py  system.py  workflow.py
backend/bimos/config/: settings.py
backend/bimos/config/defaults/: boltz.yaml  docking.yaml  env.template  esmfold.yaml  gaussian.yaml  md.yaml  orca.yaml
backend/bimos/core/: boltz.py  docking.py  protein.py  qm.py  workflow.py
backend/bimos/docking/: __init__.py  config.py  pipeline.py  sdf.py
backend/bimos/docking/templates/: vina.conf.template
backend/bimos/infrastructure/: chembl_db.py  container.py  database.py  docker_sdk.py  job_store.py
backend/bimos/infrastructure/config/: defaults.yaml
backend/bimos/infrastructure/data/: candidates_1000.db
backend/bimos/molecular_dynamics/: __init__.py  config.py  pipeline.py
backend/bimos/prediction/: __init__.py  boltz.py  confidence.py  esmfold.py  fasta.py
backend/bimos/quantum_chemistry/: __init__.py  config.py  elements.py  itp.py  pipeline.py
backend/bimos/quantum_chemistry/templates/: gaussian.gjf.template  orca.inp.template
backend/bimos/scripts/: predict_esm.py  prepare_ligand.py  prepare_receptor.py
backend/bimos/shared/: exceptions.py  license.py  paths.py  pipeline.py  templates.py  user_config.py
backend/bimos/ui/: index.html
backend/bimos/ui/assets/: index--YHRpYF1.css  index-1n3jSR80.js  index-BY70EYQc.js  index-Bozb9FnJ.css  index-Brr1mmRu.js  index-Bz06-daU.js  index-C0smOjuA.js  index-C6fnyouD.js  index-CFSK6Z4Y.js  index-Cj9PQIGt.css  index-D327BiHv.js  index-D88whtQC.css  index-Dt_pgU-e.css  index-KfpPNKJ_.css  vendor-SVJ51iO0.js
backend/db/: phytocompounds_300.db
backend/dockers/: Dockerfile.bimos
backend/test/: test_bimos.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_predict_dock.py  test_workflow_dock_md_qm.py
backend/tests/fixtures/: sample_config.yaml  sample_job_store.json  sample_ligand.sdf  sample_protein.fasta
backend/tests/integration/: test_api_endpoints.py  test_cli_commands.py  test_docking_pipeline.py  test_md_pipeline.py  test_prediction_pipeline.py  test_qm_pipeline.py
backend/tests/mocks/: container_mock.py  filesystem_mock.py  orca_mock.py
backend/tests/mutation/: test_suicide.py
backend/tests/performance/: test_api_response_time.py  test_job_store_throughput.py
backend/tests/security/: test_command_injection.py  test_path_traversal.py  test_secret_leaks.py
backend/tests/unit/: test_config.py  test_container.py  test_elements.py  test_fasta.py  test_itp.py  test_job_store.py  test_paths.py  test_pipeline_base.py  test_sdf.py  test_templates.py  test_user_config.py
backend/ui/: index.html
backend/ui/assets/: index-BhDy3FFm.css
docs/: cli.md  contributing.md  development.md  index.md  installation.md
docs/api/: docking.md  infrastructure.md  molecular_dynamics.md  prediction.md  public.md  quantum_chemistry.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ConfigBar.tsx  FileDrop.tsx  FlowLauncher.tsx  SystemMonitor.tsx  Terminal.tsx  config.ts  index.css
installer/: bimos.nsi  bimos.spec  build_dmg.sh  postinst.sh  postrm.sh
installer/assets/: LICENSE.rtf  README.md  bimos-wrapper.sh  bimos.desktop
test/: guia-sistemas-prueba.md
test/PREDICT/: lysozyme.fasta  lysozyme.yaml  ubiquitin.fasta  ubiquitin.yaml
test/docking/ligands/: 11313622.sdf
