[project]
name = "bimos"
version = "0.1.0"
description = "Biomolecular Modeling Suite — CLI-first backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # CLI
    "click>=8.1.7",
    # API server (GUI mode)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Data validation
    "pydantic>=2.7.0",
    # Configuration
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    # Obfuscation (optional, used in build pipeline)
    "nuitka>=2.4.0",
    "pywebview>=6.2.1",
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "qtpy>=2.4.3",
    "zstandard>=0.25.0",
    "pyyaml>=6.0.3",
    "psutil>=5.9.0",
]

[project.scripts]
bimos = "bimos.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bimos"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
